<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_all_chat"
            android:icon="@drawable/ic_menu_chats"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_add_chat"
            android:icon="@drawable/ic_menu_add_chat"
            android:title="@string/menu_add_chat" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
        </menu>
    </item>

</menu>
